[gd_scene load_steps=6 format=3 uid="uid://b8hs6ypq0i4ct"]

[ext_resource type="Script" path="res://wizard_turtle_ui.gd" id="1_5fytd"]
[ext_resource type="SpriteFrames" uid="uid://cfmoglpki7jcx" path="res://turtleui.tres" id="2_l5vay"]
[ext_resource type="Texture2D" uid="uid://cp4sf4ytdpd46" path="res://pixil-frame-0.png" id="3_m5pu4"]
[ext_resource type="FontFile" uid="uid://jnicypq4ev8g" path="res://orangekid.otf" id="4_8ldlq"]
[ext_resource type="AudioStream" uid="uid://bg2d8cji3ou7h" path="res://sounds/random.wav" id="4_54pvs"]

[node name="WizardTurtleUI" type="Control"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_right = 152.0
offset_bottom = 288.0
grow_horizontal = 0
script = ExtResource("1_5fytd")

[node name="TurtleSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(81, 95)
sprite_frames = ExtResource("2_l5vay")
animation = &"idle"

[node name="DialogueBox" type="NinePatchRect" parent="."]
layout_mode = 0
offset_top = 152.0
offset_right = 152.0
offset_bottom = 288.0
texture = ExtResource("3_m5pu4")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="DialogueText" type="Label" parent="DialogueBox"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 144.0
offset_bottom = 128.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_8ldlq")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="CommentTimer" type="Timer" parent="."]
one_shot = true

[node name="TypingTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="TextSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_54pvs")
